CPP Conversion: So damn much (HUD, player controller)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/TestMap.TestMap
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/Blueprints/MyGameMode.MyGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/DerelictGameMode.DerelictGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
